// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipient should render 1`] = `
<div>
  <div
    class="sc-fzqNJr XjGCO"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex mb-2 space-x-2"
      >
        <div
          class="text-sm font-medium transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddQVWI flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddJBbC flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="space-y-8 mt-8 mb-2 "
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient"
          >
            Recipient
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-Axmtr jzhOwR"
        >
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhUy sc-AxheI bYHtKZ"
          >
            <button
              class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with multiple recipients tab 1`] = `
<div>
  <div
    class="sc-fzqNJr XjGCO"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex mb-2 space-x-2"
      >
        <div
          class="text-sm font-medium transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddJBbC flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddQVWI flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="space-y-8 mt-8 mb-2 MultiRecipientWrapper"
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient #1"
          >
            Recipient #1
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-Axmtr jzhOwR"
        >
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhUy sc-AxheI bYHtKZ"
          >
            <button
              class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without recipients 1`] = `
<div>
  <div
    class="sc-fzqNJr XjGCO"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex mb-2 space-x-2"
      >
        <div
          class="text-sm font-medium transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddQVWI flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddJBbC flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="space-y-8 mt-8 mb-2 "
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient"
          >
            Recipient
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-Axmtr jzhOwR"
        >
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhUy sc-AxheI bYHtKZ"
          >
            <button
              class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should set available amount 1`] = `
<div>
  <div
    class="sc-fzqNJr XjGCO"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex mb-2 space-x-2"
      >
        <div
          class="text-sm font-medium transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddQVWI flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddJBbC flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="space-y-8 mt-8 mb-2 "
      data-testid="add-recipient__form-wrapper"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="recipientAddress"
            label="Recipient"
          >
            Recipient
          </label>
        </div>
        <div>
          <button
            class="sc-fzokOt dprUuD SelectAddress  "
            data-testid="SelectAddress__wrapper"
          >
            <div
              class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
            />
            <div
              class="absolute flex items-center right-4 space-x-3"
            >
              <div
                class="sc-AxiKw dklFyP"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </button>
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
            data-testid="SelectAddress__input"
            name="recipientAddress"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="amount"
            label="Amount ARK"
          >
            Amount ARK
          </label>
        </div>
        <div
          class="sc-Axmtr jzhOwR"
        >
          <input
            class="sc-AxhCb iZAVt overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="add-recipient__amount-input"
            name="amount"
            placeholder="Amount"
            type="number"
          />
          <div
            class="sc-AxhUy sc-AxheI bYHtKZ"
          >
            <button
              class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
              data-testid="add-recipient__send-all"
            >
              Send All
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</div>
`;
